feat: 完成OIDC基建架构设计
- 设计多OIDC服务商支持架构
- 实现动态服务商注册和策略管理
- 创建OIDC配置管理相关实体和仓储
- 实现微信小程序和微信公众号策略
- 更新数据库schema支持OIDC配置
- 添加OIDC相关API接口
- 创建项目开发规范文档

--- a/modules/interfaces/build.gradle
+++ b/modules/interfaces/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    implementation project(':gourdboat-domain')
     implementation project(':gourdboat-application')
     implementation project(':gourdboat-infrastructure')
     
