feat: 完成必须改进的安全和错误处理功能
- 添加OIDC错误码枚举和认证异常类
- 实现敏感信息加密服务（AES加密）
- 添加JPA加密字符串转换器
- 实现OIDC配置验证器
- 更新OIDC服务实现，集成错误处理和配置验证
- 添加全局异常处理器
- 更新配置文件支持加密密钥配置
- 为client_secret字段添加自动加密/解密

--- a/modules/bootstrap/src/main/resources/application.yml
+++ b/modules/bootstrap/src/main/resources/application.yml
@@ -2,6 +2,8 @@ app:
   jwt:
     secret: ${JWT_SECRET}
     expiration: 86400000  # 24 hours in milliseconds
+  encryption:
+    key: ${ENCRYPTION_KEY:default-encryption-key-32-chars-long-for-dev}
 
 spring:
   datasource:
